<resources>
    <string name="app_name">Student Services Management App</string>
    <string name="student_services_management">Student Services Management</string>
    <string name="student_login">Student Login</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="app_logo">AppLogo</string>
    <string name="charles_hostler_services">Charles Hostler Services</string>
    <string name="dorms_services">Dorms Services</string>
    <string name="laundry">Laundry</string>
    <string name="room_cleaning">Room Cleaning</string>
    <string name="gym">Gym</string>
    <string name="pool">Pool</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="n_a">N/A</string>
    <string name="account">Account</string>
    <string name="reservations">Reservations</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="proceed">Proceed</string>
    <string name="choose_residence">Choose Residence</string>
    <string name="full_name">Full Name</string>
    <string name="id">ID#</string>
    <string name="service">Service</string>
    <string name="date">Date</string>
    <string name="time_slot">Time Slot</string>
    <string name="cancel_reservation">Cancel Reservation</string>
    <string name="time_slots">Time Slots</string>
    <string name="capacity">Capacity</string>
    <string name="available">Available</string>
    <string name="id_n_a">ID# N/A</string>
    <string name="srv_n_a">#SRV-N/A</string>
    <string name="reservation_date">Reservation Date</string>
    <string name="incremental_set_up">Incremental Set Up</string>
    <string name="save_changes">Save Changes</string>
    <string name="customizable_time_slots">Customizable Time Slots</string>
    <string name="customize_time_slots">Customize Time Slots</string>
    <string name="customize_slots_text2">Try to customize your time slots!</string>
    <string name="customize_slots_text1">Do you feel like the incremental method is not enough to set up your time slots?</string>
    <string name="slot_length">Slot Length</string>
    <string name="maximum_capacity">Maximum Capacity</string>
    <string name="date_range">Date Range</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="add_slot">Add Slot</string>
    <string name="available_time_slots">Available Time Slots</string>
    <string name="select_date">Select Date</string>
    <string name="i_am_a_dorms_student">I am a dorms student</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="aub_email">AUB Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="id_number">ID Number</string>
    <string name="student_sign_up">Student Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="gender">Gender</string>
    <string name="admin_login">Admin Login</string>
    <string name="scanning_reservation_qr_code">Scanning Reservation QR Code</string>
    <string name="admin_sign_up">Admin Sign Up</string>
    <string name="intro_text">Get ready to make your life easier with a single click in the app.</string>
    <string name="get_started">Get started</string>
    <string name="i_am_a">I am a</string>
    <string name="student">Student</string>
    <string name="admin">Admin</string>
    <string name="yes">Yes!</string>
    <string name="cancel">Cancel</string>
    <string name="booking_confirmation">Booking Confirmation</string>
    <string name="do_you_want_to_confirm">Do you want to confirm your reservation?</string>

    <string-array name="male_residences_array">
        <item>Kerr I Hall</item>
        <item>Penrose Hall</item>
    </string-array>

    <string-array name="female_residences_array">
        <item>Kerr II Hall</item>
        <item>New Women\'s Dorms</item>
        <item>Murex Hall</item>
        <item>Boustany Hall</item>
        <item>Jewett Hall</item>
        <item>Off-campus (Mayfair)</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="set_up_time_slots">Set Up Time Slots</string>
    <string name="manage_reservations">Manage Reservations</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
</resources>