<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_options">
        <item
            android:id="@+id/reservations_item"
            android:checkable="true"
            android:icon="@drawable/ic_reservations"
            android:title="@string/reservations" />
        <item
            android:id="@+id/account_item"
            android:checkable="true"
            android:icon="@drawable/ic_account"
            android:title="@string/account" />
        <item
            android:id="@+id/help_item"
            android:checkable="true"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
    </group>

    <group android:id="@+id/group_log_out">
        <item
            android:id="@+id/log_out_item"
            android:checkable="true"
            android:icon="@drawable/ic_log_out"
            android:title="@string/log_out" />
    </group>
</menu>