<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentServicesActivity"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutProfileContainer"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/welcomeLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="32dp"
                android:text="@string/welcome_back"
                android:textColor="#004D40"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:text="@string/n_a"
                android:textColor="#004D40"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewServices1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/dorms_services"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutProfileContainer" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewServices1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLaundry"
            style="@style/ServiceButton"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_laundry"
            android:text="@string/laundry" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCleaning"
            style="@style/ServiceButton"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_cleaning"
            android:text="@string/room_cleaning" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewServices2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/charles_hostler_services"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewServices2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonGym"
            style="@style/ServiceButton"
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_gym"
            android:text="@string/gym" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPool"
            style="@style/ServiceButton"
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_pool"
            android:text="@string/pool" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>